# colcon-worktree-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/cwm/: __init__.py  errors.py
src/cwm/cli/: activate_cmd.py  base_cmd.py  build_cmd.py  cd_cmd.py  clean_cmd.py  completion.py  detect_cmd.py  enter_cmd.py  env_cmd.py  focus_cmd.py  init_cmd.py  main.py  repo_cmd.py  shell_init_cmd.py  status_cmd.py  worktree_cmd.py
src/cwm/core/: cdc.py  config.py  dga.py  meta_wsm.py  wsm.py
src/cwm/util/: colcon_runner.py  fs.py  git.py  repos.py  ros_env.py  shell.py
tests/: conftest.py
tests/integration/: test_init.py
tests/unit/: test_cd_cmd.py  test_cdc.py  test_cli_structure.py  test_completion.py  test_config.py  test_dga.py  test_git.py  test_meta_wsm.py  test_passthrough.py  test_repo_cmd.py  test_repos.py  test_ros_env.py  test_wsm.py
